--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  font-family: sans-serrif;
+  font-family: sans-serif;
 }
 
 img {
@@ -21,7 +21,7 @@ img {
 @media (max-width: 768px) {
   .container {
     max-width: 580px;
-    width: 95%;
+    width: 90%;
   }
 }
 
@@ -63,6 +63,11 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+  font-weight: 400;
+  margin-left: 50px;
 }
 
 .navbar__button {
@@ -88,6 +93,133 @@ img {
   }
   .navbar__logo {
     width: 90px;
+  }
+}
+
+/* Импорт стилей заголовка */
+.header-block {
+  background: #f5f5f5;
+}
+
+.header {
+  color: #333333;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.header__text {
+  -ms-flex-preferred-size: 45%;
+      flex-basis: 45%;
+  padding-right: 120px;
+}
+
+.header__title {
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 55px;
+}
+
+.header__title-text {
+  padding: 0;
+  margin: 0;
+}
+
+.header__subtitle-text {
+  font-size: 20px;
+  font-weight: 400;
+  margin-top: 40px;
+}
+
+.header__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 69px;
+}
+
+.header__list-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 25px;
+}
+
+.header__list-icon {
+  width: 40px;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 2px solid #ffd200;
+  border-radius: 50%;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.header__list-text {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 30px;
+}
+
+.list-text {
+  display: block;
+}
+
+@media (max-width: 1200px) {
+  .header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header__list {
+    margin-bottom: 44px;
+  }
+  .header__text {
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header__title {
+    font-size: 24px;
+    line-height: 1.4;
+    margin-bottom: 13px;
+  }
+  .header__subtitle-text {
+    font-size: 16px;
+    margin-bottom: 28px;
+  }
+  .header__list {
+    font-size: 12px;
+    margin-top: 28px;
+  }
+  .header__list-item {
+    margin-bottom: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
