--- a/src/sass/blocks/_interface.sass
+++ b/src/sass/blocks/_interface.sass
@@ -1,5 +1,5 @@
 body
- font-family: sans-serrif
+ font-family: sans-serif
 img
  max-width: 100%
 .container
@@ -11,7 +11,7 @@ img
 @media ( max-width: 768px )
  .container
   max-width: 580px
-  width: 95%
+  width: 90%
 .button
  border-radius: 10px
  background-color: $main-color
