--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -11,6 +11,11 @@
  &__address
   display: flex
   flex-direction:column
+  margin: 0
+  padding: 0
+  font-size: 13px
+  font-weight: 400
+  margin-left: 50px
  &__button
   margin-left: 30px
  &__phone
