--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -14,17 +14,17 @@
   margin: 0
   padding: 0
   font-size: 13px
-  font-weight: 400
   margin-left: 50px
  &__button
   margin-left: 30px
+  +bold
  &__phone
   display: inline-block
   color: $text-color
   font-size: 20px
-  font-weight: 400
   text-decoration: none
   margin-top: 10px
+  +bold
 @media ( max-width: 768px )
  .navbar
   &__contacts
