--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,7 @@
+@import 'fonts'
 @import 'colors'
 @import 'interface'
 /* Импорт стилей шапки */
-@import 'navbar'
+@import 'blocks/navbar'
 /* Импорт стилей заголовка */
-@import 'header'
+@import 'blocks/header'
