--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -14,9 +14,10 @@
   margin: 0
   padding: 0
   font-size: 13px
-  margin-left: 50px
+  margin-left: 81px
  &__button
   margin-left: 30px
+  font-size: 13px
   +bold
  &__phone
   display: inline-block
