--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,7 +45,7 @@ img {
   border-radius: 10px;
   background-color: #ffd200;
   border: none;
-  padding: 18px 30px;
+  padding: 17px 30px 18px 30px;
 }
 
 /* Импорт стилей шапки */
@@ -73,6 +73,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   text-align: right;
+  margin-top: -3px;
 }
 
 .navbar__address {
@@ -88,6 +89,7 @@ img {
 .navbar__button {
   margin-left: 30px;
   font-size: 13px;
+  letter-spacing: -0.1px;
   font-family: Museo Sans Cyrillic Bold, sans-serif;
   font-weight: 700;
 }
@@ -97,7 +99,7 @@ img {
   color: #333333;
   font-size: 20px;
   text-decoration: none;
-  margin-top: 10px;
+  margin-top: 7px;
   font-family: Museo Sans Cyrillic Bold, sans-serif;
   font-weight: 700;
 }
@@ -128,19 +130,21 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 50px;
+  padding-top: 47px;
   padding-bottom: 50px;
 }
 
 .header__text {
   -ms-flex-preferred-size: 45%;
       flex-basis: 45%;
-  padding-right: 120px;
+  padding-right: 76px;
 }
 
 .header__title {
   font-size: 40px;
   line-height: 55px;
+  letter-spacing: 0.03em;
+  word-spacing: 1px;
 }
 
 .header__title-text {
@@ -150,7 +154,8 @@ img {
 
 .header__subtitle-text {
   font-size: 20px;
-  margin-top: 40px;
+  margin-top: 38px;
+  letter-spacing: 0.003em;
   font-family: Museo Sans Cyrillic Bold, sans-serif;
   font-weight: 700;
 }
@@ -163,6 +168,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   margin-top: 69px;
+  letter-spacing: -0.07em;
 }
 
 .header__list-item {
@@ -172,12 +178,12 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 25px;
+  margin-bottom: 28px;
 }
 
 .header__list-icon {
-  width: 40px;
-  height: 40px;
+  width: 36px;
+  height: 37px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -201,10 +207,12 @@ img {
       -ms-flex-align: center;
           align-items: center;
   margin-left: 30px;
+  line-height: 1.3;
 }
 
 .list-text {
   display: block;
+  margin-bottom: 1px;
 }
 
 @media (max-width: 1200px) {
