--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -5,22 +5,25 @@
  color: $text-color
  display: flex
  justify-content: space-between
- padding-top: 50px
+ padding-top: 47px
  padding-bottom: 50px
 
  &__text
   flex-basis: 45%
-  padding-right: 120px
+  padding-right: 76px
  &__title
   font-size: 40px
   line-height: 55px
+  letter-spacing: 0.03em
+  word-spacing: 1px
 
   &-text
    padding: 0
    margin: 0
  &__subtitle-text
   font-size: 20px
-  margin-top: 40px
+  margin-top: 38px
+  letter-spacing: 0.003em
   +bold
  &__list
   list-style: none
@@ -28,13 +31,14 @@
   padding: 0
   align-items: center
   margin-top: 69px
+  letter-spacing: -0.07em
   &-item
    display: flex
    align-items: center
-   margin-bottom: 25px
+   margin-bottom: 28px
   &-icon
-   width: 40px
-   height: 40px
+   width: 36px
+   height: 37px
    display: flex
    justify-content: center
    align-items: center
@@ -49,9 +53,11 @@
    padding: 0
    align-items: center
    margin-left: 30px
+   line-height: 1.3
 
 .list-text
  display: block
+ margin-bottom: 1px
 
 @media ( max-width: 1200px )
  .header
