--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -8,6 +8,7 @@
   display: flex
   align-items: center
   text-align: right
+  margin-top: -3px
  &__address
   display: flex
   flex-direction:column
@@ -18,13 +19,14 @@
  &__button
   margin-left: 30px
   font-size: 13px
+  letter-spacing: -0.1px
   +bold
  &__phone
   display: inline-block
   color: $text-color
   font-size: 20px
   text-decoration: none
-  margin-top: 10px
+  margin-top: 7px
   +bold
 @media ( max-width: 768px )
  .navbar
