--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -7,8 +7,11 @@ img
  margin: auto
 @media ( max-width: 1200px )
  .container
-  width: 760px
-@media ( max-width: 768px )
+  width: 992px
+@media ( max-width: 1024px )
+ .container
+  width: 768px
+@media ( max-width: 820px )
  .container
   max-width: 580px
   width: 90%
