--- a/src/sass/_fonts.sass
+++ b/src/sass/_fonts.sass
@@ -13,8 +13,8 @@
  font-style: normal
 
 =reg
- font-family: Museo Sans Cyrillic Light, sans-serif
+ font-family: 'Museo Sans Cyrillic Light', sans-serif
  font-weight: 300
 =bold
- font-family: Museo Sans Cyrillic Bold, sans-serif
+ font-family: 'Museo Sans Cyrillic Bold', sans-serif
  font-weight: 700
