--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,9 @@
 @import 'fonts'
 @import 'colors'
-@import 'interface'
+
 /* Импорт стилей шапки */
 @import 'blocks/navbar'
 /* Импорт стилей заголовка */
 @import 'blocks/header'
+@import 'interface'
+@import 'adaptive'
