--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,20 +1,11 @@
 body
- font-family: Museo Sans Cyrillic Light, sans-serif
+ font-family: 'Museo Sans Cyrillic Light', sans-serif
 img
  max-width: 100%
 .container
  width: 1170px
  margin: auto
-@media ( max-width: 1200px )
- .container
-  width: 992px
-@media ( max-width: 1024px )
- .container
-  width: 768px
-@media ( max-width: 820px )
- .container
-  max-width: 580px
-  width: 90%
+
 .button
  border-radius: 10px
  background-color: $main-color
