--- a/src/sass/_adaptive.sass
+++ b/src/sass/_adaptive.sass
@@ -1,9 +1,9 @@
 @media ( max-width: 1200px )
  .container
   width: 1024px
- .header__text
-  flex-basis: 85%
  .header
+  &__text
+   flex-basis: 85%
   &-list
    margin-bottom: 44px
   &__text
