--- a/src/sass/_adaptive.sass
+++ b/src/sass/_adaptive.sass
@@ -4,10 +4,9 @@
  .header
   &__text
    flex-basis: 85%
+   padding-right: 10px
   &-list
    margin-bottom: 44px
-  &__text
-   padding-right: 10px
 
 @media ( max-width: 1060px )
  .container
@@ -32,7 +31,7 @@
    font-size: 41px
    line-height: 1.4
    margin-bottom: 13px
-  &__subtitle-tex
+  &__subtitle-text
    font-size: 16px
    margin-bottom: 28px
    +bold
