--- a/src/css/style.css
+++ b/src/css/style.css
@@ -196,10 +196,10 @@ img {
   .header__text {
     -ms-flex-preferred-size: 85%;
         flex-basis: 85%;
-    padding-right: 10px;
+    padding-right: 4px;
   }
   .header-list {
-    margin-bottom: 44px;
+    margin-bottom: 37px;
   }
 }
 
@@ -227,38 +227,59 @@ img {
 @media (max-width: 820px) {
   .container {
     max-width: 580px;
-    width: 90%;
+    width: 87%;
   }
 }
 
 @media (max-width: 768px) {
+  .header {
+    padding-top: 31px;
+    padding-left: 5px;
+  }
   .header__title {
-    font-size: 41px;
+    font-size: 24px;
     line-height: 1.4;
     margin-bottom: 13px;
+    letter-spacing: 0.015em;
+    word-spacing: 0.3px;
+    line-height: 1.23;
   }
   .header__subtitle-text {
     font-size: 16px;
     margin-bottom: 28px;
     font-family: 'Museo Sans Cyrillic Bold', sans-serif;
     font-weight: 700;
+    margin-top: -5px;
+    letter-spacing: -0.009em;
+    line-height: 1.23;
   }
   .header-list {
     font-size: 12px;
-    margin-top: 28px;
+    margin-top: -2px;
+    margin-left: -2px;
   }
   .header-list__item {
     margin-bottom: 20px;
+  }
+  .header-list__text {
+    margin-left: 15px;
+    margin-top: 3px;
+    letter-spacing: 0.009em;
+    word-spacing: -0.4px;
+    line-height: 1.2;
   }
   .navbar__contacts {
     display: none;
   }
   .navbar__button {
-    font-size: 12px;
-    padding: 15px 26px;
+    font-size: 10px;
+    padding: 14px 27px 14px 26px;
+    border-radius: 5px;
+    letter-spacing: 0em;
+    margin-left: -60px;
   }
   .navbar__logo {
-    width: 90px;
+    width: 91px;
   }
 }
 /*# sourceMappingURL=style.css.map */
