--- a/src/sass/_adaptive.sass
+++ b/src/sass/_adaptive.sass
@@ -4,9 +4,9 @@
  .header
   &__text
    flex-basis: 85%
-   padding-right: 10px
+   padding-right: 4px
   &-list
-   margin-bottom: 44px
+   margin-bottom: 37px
 
 @media ( max-width: 1060px )
  .container
@@ -23,28 +23,47 @@
 @media ( max-width: 820px )
  .container
   max-width: 580px
-  width: 90%
+  width: 87%
 
 @media ( max-width: 768px )
  .header
+  padding-top: 31px
+  padding-left: 5px
   &__title
-   font-size: 41px
+   font-size: 24px
    line-height: 1.4
    margin-bottom: 13px
+   letter-spacing: 0.015em
+   word-spacing: 0.3px
+   line-height: 1.23
   &__subtitle-text
    font-size: 16px
    margin-bottom: 28px
    +bold
+   margin-top: -5px
+   letter-spacing: -0.009em
+   line-height: 1.23
   &-list
    font-size: 12px
-   margin-top: 28px
+   margin-top: -2px
+   margin-left: -2px
    &__item
     margin-bottom: 20px
+   &__text
+    margin-left: 15px
+    margin-top: 3px
+    letter-spacing: 0.009em
+    word-spacing: -0.4px
+    line-height: 1.2
  .navbar
   &__contacts
    display: none
   &__button
-   font-size: 12px
-   padding: 15px 26px
+   font-size: 10px
+   padding: 14px 27px 14px 26px
+   border-radius: 5px
+   letter-spacing: 0em
+   margin-left: -60px
+
   &__logo
-   width: 90px
+   width: 91px
