--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -6,10 +6,10 @@
  display: flex
  justify-content: space-between
  padding-top: 47px
- padding-bottom: 50px
+ padding-bottom: 67px
 
  &__text
-  flex-basis: 45%
+  flex-basis: 46%
   padding-right: 76px
  &__title
   font-size: 40px
@@ -36,6 +36,8 @@
    display: flex
    align-items: center
    margin-bottom: 28px
+   &:last-child
+    margin-bottom: 0
   &__icon
    width: 36px
    height: 37px
