--- a/src/sass/_adaptive.sass
+++ b/src/sass/_adaptive.sass
@@ -107,3 +107,8 @@
    margin-top: 15px
    margin-left: 5px
    flex-direction: column
+
+@media ( max-width: 360px )
+ .offer
+  &__title
+   max-width: 273px
