--- a/src/sass/_adaptive.sass
+++ b/src/sass/_adaptive.sass
@@ -104,11 +104,22 @@
 @media ( max-width: 600px )
  .offer
   &__subtex
-   margin-top: 15px
-   margin-left: 5px
+   margin-top: 12px
+   margin-left: 6px
    flex-direction: column
+ .section
+  padding-top: 15px
 
 @media ( max-width: 360px )
  .offer
   &__title
    max-width: 273px
+  &__button
+   font-size: 14px
+   padding-left: 51px
+   padding-right: 51px
+   letter-spacing: 0em
+   line-height: 1.4
+   word-spacing: 1px
+  &__input
+   padding-left: 22px
