--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -17,7 +17,7 @@
  &__title
   max-width: 360px
   line-height: 35px
-  margin-bottom: 21px
+  margin-bottom: 19px
  &__subtitle
   max-width: 250px
   margin-bottom: 30px
@@ -26,10 +26,11 @@
   margin-bottom: 29px
   &:first-child
    margin-right: 10px
+   padding-left: 22px
+   padding-top: 24px
  &__button
   width: 100%
   min-height: 70px
-  +bold
  &__text
   width: 227px
   &-text
@@ -42,4 +43,4 @@
  &__text
   &:first-child
    min-width: 227px
-   margin-right: 68px
+   margin-right: 70px
