--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,6 +5,8 @@
 @import 'blocks/navbar'
 /* Импорт стилей заголовка */
 @import 'blocks/header'
-@import 'interface'
+
 @import 'blocks/offer'
+@import 'blocks/modal'
+@import 'interface'
 @import 'adaptive'
