--- a/src/css/style.css
+++ b/src/css/style.css
@@ -246,71 +246,6 @@
   margin-right: 70px;
 }
 
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: none;
-  width: 100%;
-  height: 100%;
-}
-
-.modal__block {
-  width: 570px;
-  margin: auto;
-  background-color: #ffffff;
-}
-
-.modal_active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.modal-dialog {
-  position: relative;
-  width: 370px;
-  margin: auto;
-}
-
-.modal-dialog__close {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.modal-dialog__title {
-  width: 370px;
-  font-size: 22px;
-  line-height: 33px;
-  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
-  font-weight: 700;
-  margin-bottom: 45px;
-}
-
-.modal-dialog__subtitle {
-  font-size: 16px;
-  margin-bottom: 48px;
-}
-
-.modal__input {
-  display: block;
-  width: 370px;
-}
-
-.modal__input:first-child {
-  margin-bottom: 15px;
-}
-
-.modal__input:last-child {
-  margin-bottom: 30px;
-}
-
-.modal__button {
-  width: 370px;
-}
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -378,17 +313,104 @@ img {
 }
 
 .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  width: 100%;
+  height: 100%;
   text-align: center;
+}
+
+.modal__block {
+  width: 570px;
+  height: 674px;
+  margin: auto;
+  background-color: #ffffff;
+}
+
+.modal_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal-dialog {
+  position: relative;
+  width: 370px;
+  height: 518px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: auto;
+}
+
+.modal-dialog__close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: none;
+}
+
+.modal-dialog__title {
+  width: 370px;
+  font-size: 22px;
+  line-height: 33px;
+  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.modal-dialog__subtitle {
+  font-size: 16px;
+  margin-bottom: 48px;
+}
+
+.modal__input {
+  display: block;
+  width: 370px;
+}
+
+.modal__input:first-child {
+  margin-bottom: 15px;
+}
+
+.modal__input:last-child {
+  margin-bottom: 28px;
+}
+
+.modal__button {
+  width: 370px;
+}
+
+.modal__form {
+  margin-left: -4px;
 }
 
 .modal-subtex {
   font-size: 15px;
+  max-width: 289px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 29px;
+  margin-left: 35px;
+  line-height: 1.4;
+  margin-bottom: 6px;
 }
 
 .modal__phone {
   font-size: 24px;
   font-family: 'Museo Sans Cyrillic Bold', sans-serif;
   font-weight: 700;
+  text-decoration: none;
+  color: #000000;
+  margin-left: -11px;
 }
 
 .modal-button {
@@ -400,7 +422,11 @@ img {
   padding: 28px 30px 25px 30px;
 }
 
-.modal-button:hover {
+.modal__input {
+  padding-left: 23px;
+}
+
+.modal__input:hover {
   background-color: #ffdb33;
   cursor: pointer;
 }
