--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -21,10 +21,13 @@
   flex-direction: column
   margin: auto
   &__close
-   position: absolute
-   top: 0
-   right: 0
-   display: none
+   position: relative
+   top: 1px
+   right: -99px
+   margin-left: auto
+   border: none
+   border-radius: 50%
+   background-color: $main-color
   &__title
    width: 370px
    font-size: 22px
