--- a/src/sass/_adaptive.sass
+++ b/src/sass/_adaptive.sass
@@ -123,3 +123,17 @@
    word-spacing: 1px
   &__input
    padding-left: 22px
+
+/*для слайдера*/
+@media (max-width: 768px)
+ .portfolio__title
+  font-size: 20px
+  margin-top: 20px
+  margin-bottom: 40px
+
+@media (max-width: 576px)
+ .portfolio__title
+  margin-top: 4px
+  font-size: 18px
+  line-height: normal
+  max-width: 290px
