--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -23,6 +23,7 @@ img
  &-title
   font-size: 24px
   +bold
+  text-align: center
  &-subtitle
   display: block
   font-size: 16px
@@ -38,3 +39,12 @@ img
  padding: 23px 26px 24px 30px
  font-size: 15px
  border-radius: 10px
+
+.arrows
+ &__left, &__right
+  &:hover
+   cursor: pointer
+
+.slider
+ &__image
+  margin: auto
