--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,8 +5,8 @@
 @import 'blocks/navbar'
 /* Импорт стилей заголовка */
 @import 'blocks/header'
-
-@import 'blocks/offer'
 @import 'interface'
+@import 'blocks/offer'
+@import 'blocks/portfolio'
 @import 'blocks/modal'
 @import 'adaptive'
