--- a/src/css/style.css
+++ b/src/css/style.css
@@ -173,6 +173,81 @@
   margin-bottom: 1px;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: 'Museo Sans Cyrillic Light', sans-serif;
+}
+
+img {
+  max-width: 100%;
+}
+
+.container {
+  width: 1170px;
+  margin: auto;
+}
+
+.button {
+  border-radius: 10px;
+  background-color: #ffd200;
+  border: none;
+  padding: 17px 30px 18px 30px;
+  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
+  font-weight: 700;
+}
+
+.button:hover {
+  background-color: #ffdb33;
+  cursor: pointer;
+}
+
+.section {
+  padding: 55px 0;
+}
+
+.section-title {
+  font-size: 24px;
+  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
+  font-weight: 700;
+  text-align: center;
+}
+
+.section-subtitle {
+  display: block;
+  font-size: 16px;
+}
+
+.section-subtex {
+  font-size: 15px;
+  line-height: 24px;
+}
+
+.section-phone {
+  text-decoration: none;
+  color: #333333;
+  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
+  font-weight: 700;
+}
+
+.input {
+  border: 1px solid #dddddd;
+  padding: 23px 26px 24px 30px;
+  font-size: 15px;
+  border-radius: 10px;
+}
+
+.arrows__left:hover, .arrows__right:hover {
+  cursor: pointer;
+}
+
+.slider__image {
+  margin: auto;
+}
+
 .offer {
   background: url("../img/offer-img.png") no-repeat;
   background-position: center right;
@@ -199,6 +274,7 @@
   max-width: 360px;
   line-height: 35px;
   margin-bottom: 19px;
+  text-align: left;
 }
 
 .offer__subtitle {
@@ -246,70 +322,32 @@
   margin-right: 70px;
 }
 
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+.portfolio {
+  background: #f5f5f5 url("../img/portfolio/portfolio-bac.jpg") repeat-y;
+  background-size: 50%;
 }
 
-body {
-  font-family: 'Museo Sans Cyrillic Light', sans-serif;
-}
-
-img {
-  max-width: 100%;
-}
-
-.container {
-  width: 1170px;
+.portfolio__title {
   margin: auto;
+  margin-bottom: 100px;
+  font-size: 30px;
+  line-height: 45px;
 }
 
-.button {
-  border-radius: 10px;
-  background-color: #ffd200;
-  border: none;
-  padding: 17px 30px 18px 30px;
-  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
-  font-weight: 700;
-}
-
-.button:hover {
-  background-color: #ffdb33;
-  cursor: pointer;
-}
-
-.section {
-  padding: 55px 0;
-}
-
-.section-title {
-  font-size: 24px;
-  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
-  font-weight: 700;
-}
-
-.section-subtitle {
+.portfolio__title-block {
   display: block;
-  font-size: 16px;
 }
 
-.section-subtex {
-  font-size: 15px;
-  line-height: 24px;
-}
-
-.section-phone {
-  text-decoration: none;
-  color: #333333;
-  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
-  font-weight: 700;
-}
-
-.input {
-  border: 1px solid #dddddd;
-  padding: 23px 26px 24px 30px;
-  font-size: 15px;
-  border-radius: 10px;
+.portfolio__arrows {
+  max-width: 120px;
+  margin: auto;
+  margin-top: 68px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .modal {
@@ -609,6 +647,24 @@ img {
   }
   .offer__input {
     padding-left: 22px;
+  }
+}
+
+/*для слайдера*/
+@media (max-width: 768px) {
+  .portfolio__title {
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 576px) {
+  .portfolio__title {
+    margin-top: 4px;
+    font-size: 18px;
+    line-height: normal;
+    max-width: 290px;
   }
 }
 /*# sourceMappingURL=style.css.map */
