--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -18,6 +18,7 @@
   max-width: 360px
   line-height: 35px
   margin-bottom: 19px
+  text-align: left
  &__subtitle
   max-width: 250px
   margin-bottom: 30px
