сверстал блок прайс

--- a/src/sass/blocks/_portfolio.sass
+++ b/src/sass/blocks/_portfolio.sass
@@ -3,7 +3,8 @@
  background-size: 50%
  &__title
   margin: auto
-  margin-bottom: 100px
+  margin-top: 33px
+  margin-bottom: 95px
   font-size: 30px
   line-height: 45px
   &-block
@@ -11,6 +12,13 @@
  &__arrows
   max-width: 120px
   margin: auto
-  margin-top: 68px
+  margin-top: 72px
   display: flex
   justify-content: space-between
+
+.slider
+ margin-left: -10px
+ &__item
+  width: 370px
+ &-active
+  width: 370px
