--- a/src/css/style.css
+++ b/src/css/style.css
@@ -329,7 +329,8 @@ img {
 
 .portfolio__title {
   margin: auto;
-  margin-bottom: 100px;
+  margin-top: 33px;
+  margin-bottom: 95px;
   font-size: 30px;
   line-height: 45px;
 }
@@ -341,13 +342,25 @@ img {
 .portfolio__arrows {
   max-width: 120px;
   margin: auto;
-  margin-top: 68px;
+  margin-top: 72px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.slider {
+  margin-left: -10px;
+}
+
+.slider__item {
+  width: 370px;
+}
+
+.slider-active {
+  width: 370px;
 }
 
 .modal {
@@ -470,6 +483,112 @@ img {
 .modal__input:hover {
   background-color: #ffdb33;
   cursor: pointer;
+}
+
+.price__title {
+  margin: auto;
+  margin-bottom: 50px;
+  font-size: 30px;
+  letter-spacing: 0.3px;
+  line-height: 45px;
+}
+
+.price__subtitle {
+  margin-bottom: 59px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.price__card {
+  margin-bottom: 33px;
+}
+
+.card {
+  text-align: center;
+  border: 1px solid #e8e8e8;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.card:hover {
+  -webkit-box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1);
+}
+
+.card:hover .card__image::before {
+  opacity: 1;
+}
+
+.card__text {
+  padding: 40px;
+  padding-top: 36px;
+}
+
+.card__title {
+  margin-top: 0;
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+.card__image {
+  position: relative;
+}
+
+.card__image-img {
+  display: block;
+}
+
+.card__image::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#ffd200), to(rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(to top, #ffd200 0%, rgba(255, 255, 255, 0) 100%);
+  opacity: 0;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.card__link {
+  display: inline-block;
+  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
+  font-weight: 700;
+  text-decoration: none;
+  color: #333333;
+  font-size: 16px;
+  position: relative;
+}
+
+.card__link:hover:after {
+  height: 12px;
+}
+
+.card__link:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  bottom: -4px;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #ffd200;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media (max-width: 1200px) {
@@ -665,6 +784,41 @@ img {
     font-size: 18px;
     line-height: normal;
     max-width: 290px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .card {
+    margin: auto;
+    margin-bottom: 33px;
+  }
+}
+
+@media (max-width: 576px) {
+  .price__title {
+    line-height: 1.2;
+    font-size: 18px;
+    margin-top: 33px;
+    margin-bottom: 26px;
+  }
+  .price__subtitle {
+    font-size: 14px;
+    margin-left: -15px;
+    margin-bottom: 60px;
+  }
+  .card__image {
+    width: 271px;
+  }
+  .card__text {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .card__title {
+    font-size: 14px;
+    margin-bottom: 13px;
+  }
+  .card__link {
+    font-size: 16px;
   }
 }
 /*# sourceMappingURL=style.css.map */
