--- a/src/sass/_adaptive.sass
+++ b/src/sass/_adaptive.sass
@@ -137,3 +137,31 @@
   font-size: 18px
   line-height: normal
   max-width: 290px
+
+@media (max-width: 1200px)
+ .card
+  margin: auto
+  margin-bottom: 33px
+
+@media (max-width: 576px)
+ .price
+  &__title
+   line-height: 1.2
+   font-size: 18px
+   margin-top: 33px
+   margin-bottom: 26px
+  &__subtitle
+   font-size: 14px
+   margin-left: -15px
+   margin-bottom: 60px
+ .card
+  &__image
+   width: 271px
+  &__text
+   padding-top: 30px
+   padding-bottom: 30px
+  &__title
+   font-size: 14px
+   margin-bottom: 13px
+  &__link
+   font-size: 16px
