--- a/src/sass/blocks/_portfolio.sass
+++ b/src/sass/blocks/_portfolio.sass
@@ -17,8 +17,7 @@
   justify-content: space-between
 
 .slider
- margin-left: -10px
  &__item
+  margin-left: -30px
   width: 370px
- &-active
-  width: 370px
+  margin-right: 30px
