--- a/src/css/style.css
+++ b/src/css/style.css
@@ -351,16 +351,10 @@ img {
           justify-content: space-between;
 }
 
-.slider {
-  margin-left: -10px;
-}
-
 .slider__item {
+  margin-left: -30px;
   width: 370px;
-}
-
-.slider-active {
-  width: 370px;
+  margin-right: 30px;
 }
 
 .modal {
@@ -591,6 +585,143 @@ img {
       flex-wrap: wrap;
 }
 
+.brif {
+  background-image: url("../img/brif/brif-color-bg.png"), url("../img/brif/brif-bg.jpg");
+  background-position: left center, center right;
+  background-size: 50%, contain;
+  background-repeat: repeat-y, no-repeat;
+  padding-top: 77px;
+}
+
+.brif-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: -4px;
+  margin-bottom: 21px;
+}
+
+.brif__interview {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.brif__form {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-left: 212px;
+  text-align: center;
+}
+
+.brif__input {
+  width: 100%;
+  max-width: 370px;
+  margin-bottom: 15px;
+  padding-left: 24px;
+}
+
+.brif__button {
+  height: 70px;
+  width: 100%;
+  margin-top: 15px;
+  max-width: 370px;
+  margin-top: 15px;
+  margin-bottom: 30px;
+}
+
+.interview {
+  padding-right: 67px;
+}
+
+.interview__title {
+  margin-bottom: 44px;
+  font-size: 22px;
+  line-height: 33px;
+  letter-spacing: 0.15px;
+  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
+  font-weight: 700;
+}
+
+.interview__subtitle {
+  display: block;
+  margin-bottom: 92px;
+  font-size: 16px;
+  margin-left: 3px;
+}
+
+.interview-list {
+  list-style: none;
+  padding: 0;
+  margin-left: 3px;
+}
+
+.interview-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 25px;
+  font-size: 18px;
+  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
+  font-weight: 700;
+}
+
+.interview-list__item:nth-child(1) {
+  margin-bottom: 26px;
+}
+
+.interview-list__item:nth-child(3) {
+  margin: 35px 0;
+}
+
+.interview-list__item:nth-child(3) .interview-list__counter {
+  margin-top: -15px;
+}
+
+.interview-list__counter {
+  display: inline-block;
+  margin-right: 30px;
+  text-align: center;
+  line-height: 35px;
+  font-size: 14px;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #333333;
+  border-radius: 50%;
+}
+
+.interview-list__text {
+  max-width: 400px;
+}
+
+.form__title {
+  margin-top: 19px;
+  margin-bottom: 45px;
+  font-size: 22px;
+  line-height: 33px;
+  font-family: 'Museo Sans Cyrillic Bold', sans-serif;
+  font-weight: 700;
+}
+
+.form__subtitle {
+  display: block;
+  margin-bottom: 48px;
+  font-size: 16px;
+}
+
+.form__description {
+  display: block;
+  font-size: 15px;
+  letter-spacing: -0.06px;
+  margin-left: -2px;
+}
+
+.form-title__line {
+  margin-left: 5px;
+}
+
 @media (max-width: 1200px) {
   .container {
     width: 1024px;
@@ -819,6 +950,156 @@ img {
   }
   .card__link {
     font-size: 16px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .brif__form {
+    padding-left: 30px;
+  }
+  .interview {
+    padding-right: 30px;
+    margin-bottom: 30px;
+  }
+  .interview__title {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  .interview-list__text {
+    font-size: 14px;
+    max-width: 300px;
+  }
+  .interview-list__counter {
+    margin-right: 20px;
+  }
+  .form__title {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  .form__subtitle {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 820px) {
+  .brif .container {
+    max-width: 680px;
+  }
+}
+
+@media (max-width: 768px) {
+  .brif {
+    background-image: url("../img/brif/brif-color-bg.png"), url("../img/brif/brif-bg.jpg");
+    background-position: top center, center bottom;
+    background-size: 100% 50%, cover;
+    background-repeat: repeat-x, no-repeat;
+  }
+  .brif-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .brif__form {
+    margin-top: 80px;
+  }
+}
+
+@media (max-width: 576px) {
+  .brif {
+    background-size: 100% 49%, cover;
+  }
+  .interview {
+    padding-right: 0;
+  }
+  .interview__title {
+    padding-right: 30px;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.09px;
+    margin-bottom: 16px;
+    margin-top: 28px;
+  }
+  .interview__subtitle {
+    padding-right: 86px;
+    margin-left: 1px;
+    font-size: 14px;
+    margin-bottom: 39px;
+    letter-spacing: 0.02px;
+  }
+  .interview-list {
+    font-size: 14px;
+    margin-left: -1px;
+    letter-spacing: -0.1px;
+  }
+  .interview-list__item:nth-child(1) {
+    margin-bottom: 32px;
+  }
+  .interview-list__item:nth-child(1) .interview-list__counter {
+    margin-right: 7px;
+  }
+  .interview-list__item:nth-child(2) {
+    margin-bottom: 19px;
+  }
+  .interview-list__item:nth-child(2) .interview-list__counter {
+    margin-right: 8px;
+    margin-top: -9px;
+    padding: 0 10px;
+  }
+  .interview-list__item:nth-child(3) {
+    margin-bottom: 25px;
+    margin-top: 0;
+  }
+  .interview-list__item:nth-child(3) .interview-list__counter {
+    margin-top: 2px;
+    margin-right: 8px;
+  }
+  .interview-list__item:nth-child(3) .interview-list__text {
+    max-width: 190px;
+  }
+  .interview-list__item:nth-child(4) .interview-list__counter {
+    margin-right: 7px;
+  }
+  .form__title {
+    font-size: 18px;
+    line-height: 25.35px;
+    margin-top: 0;
+    margin-bottom: 24px;
+  }
+  .form__subtitle {
+    font-size: 14px;
+    margin-bottom: 35px;
+  }
+  .form__description {
+    font-size: 14px;
+  }
+  .brif__button {
+    font-size: 14px;
+    margin-top: 0px;
+    margin-bottom: 26px;
+  }
+  .brif-block {
+    margin-left: 0;
+  }
+  .brif__form {
+    padding: 0;
+    margin-top: 55px;
+  }
+  .brif__input {
+    margin-bottom: 12px;
+    padding: 21px;
+  }
+  .form-block {
+    margin-left: 2px;
+  }
+}
+
+@media (max-width: 360px) {
+  .form__description {
+    max-width: 136px;
+    margin: auto;
+    margin-left: 67px;
+    line-height: 24px;
   }
 }
 /*# sourceMappingURL=style.css.map */
