--- a/src/sass/_adaptive.sass
+++ b/src/sass/_adaptive.sass
@@ -165,3 +165,121 @@
    margin-bottom: 13px
   &__link
    font-size: 16px
+
+@media ( max-width: 1200px )
+ .brif
+  &__form
+   padding-left: 30px
+ .interview
+   padding-right: 30px
+   &__title
+    font-size: 20px
+    margin-bottom: 15px
+   &__subtitle
+   margin-bottom: 30px
+   &-list
+    &__text
+     font-size: 14px
+     max-width: 300px
+    &__counter
+     margin-right: 20px
+ .form
+  &__title
+   font-size: 20px
+   margin-bottom: 15px
+  &__subtitle
+   margin-bottom: 30px
+
+@media ( max-width: 820px )
+ .brif
+  .container
+   max-width: 680px
+
+@media ( max-width: 768px )
+ .brif
+  background-image: url('../img/brif/brif-color-bg.png'), url('../img/brif/brif-bg.jpg')
+  background-position: top center, center bottom
+  background-size: 100% 50%, cover
+  background-repeat: repeat-x, no-repeat
+  &-block
+   flex-direction: column
+  &__form
+   margin-top: 80px
+@media (max-width: 576px)
+ .brif
+  background-size: 100% 49%, cover
+ .interview
+  padding-right: 0
+  &__title
+   padding-right: 30px
+   font-size: 18px
+   line-height: 21px
+   letter-spacing: 0.09px
+   margin-bottom: 16px
+   margin-top: 28px
+  &__subtitle
+   padding-right: 86px
+   margin-left: 1px
+   font-size: 14px
+   margin-bottom: 39px
+   letter-spacing: 0.02px
+  &-list
+   font-size: 14px
+   margin-left: -1px
+   letter-spacing: -0.1px
+   &__item:nth-child(1)
+    margin-bottom: 32px
+    .interview-list__counter
+      margin-right: 7px
+   &__item:nth-child(2)
+    margin-bottom: 19px
+    .interview-list__counter
+     margin-right: 8px
+     margin-top: -9px
+     padding: 0 10px
+   &__item:nth-child(3)
+    margin-bottom: 25px
+    margin-top: 0
+    .interview-list__counter
+     margin-top: 2px
+     margin-right: 8px
+   &__item:nth-child(3)
+    .interview-list__text
+     max-width: 190px
+   &__item:nth-child(4)
+    .interview-list__counter
+      margin-right: 7px
+ .form
+  &__title
+   font-size: 18px
+   line-height: 25.35px
+   margin-top: 0
+   margin-bottom: 24px
+  &__subtitle
+   font-size: 14px
+   margin-bottom: 35px
+  &__description
+   font-size: 14px
+
+ .brif
+  &__button
+   font-size: 14px
+   margin-top: 0px
+   margin-bottom: 26px
+  &-block
+   margin-left: 0
+  &__form
+   padding: 0
+   margin-top: 55px
+  &__input
+   margin-bottom: 12px
+   padding: 21px
+ .form-block
+  margin-left: 2px
+
+@media ( max-width: 360px )
+ .form__description
+  max-width: 136px
+  margin: auto
+  margin-left: 67px
+  line-height: 24px
