--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -44,7 +44,31 @@ img
  &__left, &__right
   &:hover
    cursor: pointer
-
 .slider
  &__image
   margin: auto
+.error
+ color: red
+ text-align: left
+ display: inline-block
+
+#email-error
+ border: 0
+ font-size: 12px
+ position: relative
+ top: -82px
+ right: 26%
+
+#username-error
+ border: 0
+ font-size: 12px
+ position: relative
+ top: -82px
+ right: 26%
+
+#phone-error
+ border: 0
+ font-size: 12px
+ position: relative
+ top: -82px
+ right: 26%
