--- a/src/sass/blocks/_brif.sass
+++ b/src/sass/blocks/_brif.sass
@@ -1,7 +1,7 @@
 .brif
  background-image: url('../img/brif/brif-color-bg.png'), url('../img/brif/brif-bg.jpg')
  background-position: left center, center right
- background-size: 50%, contain
+ background-size: 50%, cover
  background-repeat: repeat-y, no-repeat
  padding-top: 77px
  &-block
@@ -17,12 +17,13 @@
  &__input
   width: 100%
   max-width: 370px
+  margin: auto
+  display: block
   margin-bottom: 15px
   padding-left: 24px
  &__button
   height: 70px
   width: 100%
-  margin-top: 15px
   max-width: 370px
   margin-top: 15px
   margin-bottom: 30px
