--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,5 +10,6 @@
 @import 'blocks/portfolio'
 @import 'blocks/modal'
 @import 'blocks/price'
+@import 'blocks/steps'
 @import 'blocks/brif'
 @import 'adaptive'
